# pkgdb

./: .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  REVIEW.md  TODO.md  index.html  mkdocs.yml  objects.inv  pkglog.py  pyproject.toml  sitemap.xml  test_pkglog.py
.github/workflows/: ci.yml  fetch-stats.yml.example
api/: index.html
api/config/: index.html
api/database/: index.html
api/github/: index.html
api/pypi/: index.html
api/reports/: index.html
api/service/: index.html
api/types/: index.html
cli/: index.html
docs/: cli.md  getting-started.md  index.md
docs/api/: config.md  database.md  github.md  index.md  pypi.md  reports.md  service.md  types.md
getting-started/: index.html
search/: search_index.json
src/pkgdb/: __init__.py  __main__.py  api.py  badges.py  cli.py  config.py  dashboard.py  db.py  export.py  github.py  logging.py  reports.py  server.py  service.py  types.py  utils.py
src/pkglog/: __init__.py  __main__.py
tests/: conftest.py  test_api.py  test_badges.py  test_cli.py  test_config.py  test_db.py  test_export.py  test_github.py  test_integration.py  test_pkgdb.py  test_pkglog.py  test_releases.py  test_reports.py  test_server.py  test_service.py  test_utils.py
