[project]
name = "pkglog"
version = "0.1.0"
description = "Track PyPI package download statistics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypistats>=1.12.0",
    "pyyaml>=6.0.3",
    "tabulate>=0.9.0",
]

[project.scripts]
pkglog = "pkglog:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
